--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "pzhang",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.11.0"
+    "koa": "^2.11.0",
+    "koa-router": "^8.0.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
