--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "仿知乎 RESTful API",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app/index.js",
+    "start": "cross-env NODE_ENV=production node app/index.js",
+    "dev": "nodemon app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "pzhang",
@@ -12,9 +13,12 @@
   "dependencies": {
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-json-error": "^3.1.2",
+    "koa-parameter": "^3.0.1",
     "koa-router": "^8.0.8"
   },
   "devDependencies": {
+    "cross-env": "^7.0.0",
     "nodemon": "^2.0.2"
   }
 }
