--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "koa-bodyparser": "^4.2.1",
     "koa-json-error": "^3.1.2",
     "koa-parameter": "^3.0.1",
-    "koa-router": "^8.0.8"
+    "koa-router": "^8.0.8",
+    "mongoose": "^5.9.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.0",
